--- a/package.json
+++ b/package.json
@@ -18,9 +18,18 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@progress/kendo-angular-buttons": "^17.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.15.0",
+    "@progress/kendo-licensing": "^1.0.2",
+    "@progress/kendo-angular-common": "17.2.0",
+    "@progress/kendo-angular-l10n": "17.2.0",
+    "@progress/kendo-angular-popup": "17.2.0",
+    "@progress/kendo-angular-icons": "17.2.0",
+    "@progress/kendo-svg-icons": "^4.0.0",
+    "@angular/localize": "^19.0.0",
+    "@progress/kendo-theme-default": "^10.0.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.0.6",
