--- a/angular.json
+++ b/angular.json
@@ -40,6 +40,7 @@
               }
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
               {
                 "input": "node_modules/@progress/kendo-theme-default/dist/all.css"
               },
@@ -103,6 +104,7 @@
               }
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
               {
                 "input": "node_modules/@progress/kendo-theme-default/dist/all.css"
               },
