--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,3 +9,6 @@ COPY --from=builder /app/dist/my-app/browser /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
+
+# docker build -t angular-kurs-7 . 
+# docker run  -d --restart=always -p 8080:80 angular-kurs-7
