--- a/backend/ContainerBackend.csproj
+++ b/backend/ContainerBackend.csproj
@@ -10,6 +10,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.17" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.17">
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
+	  <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.16" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
