--- a/backend/ContainerBackend.csproj
+++ b/backend/ContainerBackend.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MeiliSearch" Version="0.16.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.17" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.17">
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
